# libyogrt

./: configure.ac  getres.build  getres.c  libyogrt.spec  notes.flux
config/: x_ac_flux.m4
src/: Makefile.am  Makefile.in  yogrt.c
src/flux/: Makefile.am  internal.c
